--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <div class="link">
                 <h3>Social</h3>
                 <ul>
-                    <li><a href="#">CopyRigth Byron Torres @2025</a></li>
+                    <li><a href="#">CopyRigth InfoTech @2025</a></li>
                     <li><a href="https://www.facebook.com/infotech.ec">Facebook</a></li>
                     <li><a href="https://www.youtube.com/@InfoTech.0101">Youtube</a></li>
                     <li><a href="#">Instagram</a></li>
